--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 id="user-name"
                 name="user-name"
               />
-              <svg class="modal-icon" height="18" width="24">
+              <svg class="modal-icon" height="24" width="18">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
             </div>
@@ -513,7 +513,7 @@
                 id="user-tel"
                 name="user-tel"
               />
-              <svg class="modal-icon" height="18" width="24">
+              <svg class="modal-icon" height="24" width="18">
                 <use href="./images/icons.svg#icon-tell"></use>
               </svg>
             </div>
@@ -527,13 +527,13 @@
                 id="user-mail"
                 name="user-mail"
               />
-              <svg class="modal-icon" height="18" width="24">
+              <svg class="modal-icon" height="24" width="18">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-wrapper-comment">
-            <label class="modal-form-label" for="user-comment">comment</label>
+            <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-textarea"
               placeholder="Text input"
@@ -545,9 +545,11 @@
             <input
               class="checkbox visually-hidden"
               type="checkbox"
-              id="user-agreement"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
             />
-            <label for="user-agreement" class="custom-label-user-checkbox">
+            <label for="user-privacy" class="custom-label-user-checkbox">
               <span class="custom-checkbox">
                 <svg class="chekbox-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-check-mark"></use>
