--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <header class="top">
+    <!-- <header class="top">
       <div class="container">
         <nav class="top-nav">
           <a href="./index.html" class="logo"
@@ -54,14 +54,14 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <section class="advantages section">
         <div class="container">
@@ -124,12 +124,7 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-list-item">
-              <img
-                src="./images/img-3.jpg"
-                alt="Mark"
-                width="264"
-                height="262"
-              />
+              <img src="./images/img-3.jpg" alt="Mark" width="264" />
               <div class="team-info">
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
@@ -167,12 +162,7 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img
-                src="./images/img-2.jpg"
-                alt="Tom"
-                width="264"
-                height="262"
-              />
+              <img src="./images/img-2.jpg" alt="Tom" width="264" />
               <div class="team-info">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
@@ -209,12 +199,7 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img
-                src="./images/img-1.jpg"
-                alt="Camila"
-                width="264"
-                height="262"
-              />
+              <img src="./images/img-1.jpg" alt="Camila" width="264" />
               <div class="team-info">
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
@@ -252,12 +237,7 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img
-                src="./images/img.jpg"
-                alt="Daniel"
-                width="264"
-                height="262"
-              />
+              <img src="./images/img.jpg" alt="Daniel" width="264" />
               <div class="team-info">
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-text">UI Designer</p>
@@ -479,7 +459,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="close-svg" width="8" height="8">
@@ -560,8 +540,8 @@
             </label>
           </div>
           <button class="send-form-button" type="submit">Send</button>
-        </form>
+        </form> 
       </div>
-    </div>
+    </div>-->
   </body>
 </html>
