--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       </div>
     </header> -->
     <main>
-      <!-- <section class="hero section">
+      <section class="hero section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <section class="advantages section">
         <div class="container">
