--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <!-- <header class="top">
+    <header class="top">
       <div class="container">
         <nav class="top-nav">
           <a href="./index.html" class="logo"
@@ -53,8 +53,13 @@
             </li>
           </ul>
         </address>
+        <div class="header-mobile-icon">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+          </svg>
+        </div>
       </div>
-    </header> -->
+    </header>
     <main>
       <section class="hero section">
         <div class="container">
