--- a/index.html
+++ b/index.html
@@ -464,7 +464,10 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop is-open">
+
+    <!-- backdrop -->
+
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="close-svg" width="8" height="8">
@@ -545,8 +548,8 @@
             </label>
           </div>
           <button class="send-form-button" type="submit">Send</button>
-        </form> 
+        </form>
       </div>
-    </div>-->
+    </div>
   </body>
 </html>
