--- a/index.html
+++ b/index.html
@@ -53,13 +53,87 @@
             </li>
           </ul>
         </address>
-        <div class="header-mobile-icon">
+        <button type="button" class="header-mobile-btn">
           <svg width="24" height="24">
             <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
           </svg>
+        </button>
+      </div>
+
+      <!-- mobile menu -->
+
+      <div class="mobile-menu">
+        <div>
+          <button type="button" class="mobile-close-btn">
+            <svg class="mob-close-svg" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mob-nav">
+            <ul class="mob-nav-list">
+              <li class="mob-nav-item">
+                <a class="mob-nav-link" href="./index.html">Studio</a>
+              </li>
+              <li class="mob-nav-item">
+                <a class="mob-nav-link" href="">Portfolio</a>
+              </li>
+              <li class="mob-nav-item">
+                <a class="mob-nav-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <address class="mob-contacts">
+            <ul class="mob-contacts-list">
+              <li class="mob-contacts-item">
+                <a class="mob-contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mob-contacts-item">
+                <a class="mob-contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mob-social">
+            <li class="mob-social-list">
+              <a href="" class="mob-social-link">
+                <svg width="24" height="24" class="mob-social-link-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-list">
+              <a href="" class="mob-social-link">
+                <svg width="24" height="24" class="mob-social-link-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-list">
+              <a href="" class="mob-social-link">
+                <svg width="24" height="24" class="mob-social-link-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-social-list">
+              <a href="" class="mob-social-link">
+                <svg width="24" height="24" class="mob-social-link-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
+
+    <!-- main and hero -->
+
     <main>
       <section class="hero section">
         <div class="container">
@@ -551,5 +625,7 @@
         </form>
       </div>
     </div>
+
+    <!-- backdrop end -->
   </body>
 </html>
