--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
     <!-- backdrop -->
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="close-svg" width="8" height="8">
